--- a/appsettings.json
+++ b/appsettings.json
@@ -1,21 +1,12 @@
 {
-  "ConnectionString": {
-    "TicketDb": "Server=.;Database=TicketService....",
-    "CinemaDb" : "Server=.;"
+  "ConnectionStrings": {
+    "TicketDb": "Server=.\\SQLEXPRESS;Database=TicketService;MultipleActiveResultSets=true;Integrated Security = True;"
+    //"CinemaDb": "Server ="
   }
-// "key" : "value"
-//  "Key3": {
-//    "key": "value"
-//  },
-//  "key4": [ "pippo", "pluto", "paperink" ],
-//  "key5": [
-//    {
-//      "key": "value",
-//      "key2": "value"
-//    },
-//    {
-//      "key": "value",
-//      "key2": "value"
-//    }
-//  ]
-//}
+
+
+}
+
+
+
+
